fix spacing on all-events page

--- a/app/assets/stylesheets/allevents.scss
+++ b/app/assets/stylesheets/allevents.scss
@@ -3,7 +3,7 @@
 // You can use Sass (SCSS) here: http://sass-lang.com/
 #filters{
   width: 100%;
-  margin: 5%;
+  margin: 1%;
   text-align:center;
 }
 
